Get basically working, including https and exposing via public tunnel using ngrok

--- a/samples/aspnetcore/Properties/launchSettings.json
+++ b/samples/aspnetcore/Properties/launchSettings.json
@@ -4,7 +4,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ENDPOINT_HOST": "https://47a3f9bf.ngrok.io",
+        "AGENT_NAME": "Bill Debug"
       },
       "applicationUrl": "http://localhost:5000/"
     }
