--- a/samples/aspnetcore/WebAgent.csproj
+++ b/samples/aspnetcore/WebAgent.csproj
@@ -15,7 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
     <PackageReference Include="Jdenticon.AspNetCore" Version="2.2.1" />
+<!--
     <PackageReference Include="AgentFramework.AspNetCore" Version="4.0.0-preview.648" />
+-->
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +28,10 @@
     <None Update="pool_genesis.txn">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\AgentFramework.AspNetCore\AgentFramework.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
