--- a/scripts/web-agents-ngrok-config.yaml
+++ b/scripts/web-agents-ngrok-config.yaml
@@ -1,12 +1,12 @@
-web_addr: 5037
+web_addr: 16938
 tunnels:
   web-agent-1:
     addr: 7000
     proto: http
     host_header: "localhost:7000"
-    bind-tls: false
+    bind-tls: true
   web-agent-2:
     addr: 8000
     proto: http
     host_header: "localhost:8000"
-    bind-tls: false
+    bind-tls: true
